[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Stages/Room/Room.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/RoomFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/Portal/Portal.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Enemy/Turret.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sprites/background_room.png" type="Texture" id=5]

[node name="Room" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1025.0
margin_bottom = 599.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CenterContainer"]
modulate = Color( 0.427451, 0.427451, 0.427451, 1 )
margin_left = 248.0
margin_top = 255.0
margin_right = 776.0
margin_bottom = 343.0
custom_fonts/font = ExtResource( 2 )
text = "Normal Room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portals" type="Node2D" parent="."]

[node name="PortalLeft" parent="Portals" instance=ExtResource( 3 )]
position = Vector2( 1.18251, 306.933 )
rotation = -1.57079
direction = Vector2( -1, 0 )

[node name="PlayerSpawn" parent="Portals/PortalLeft" index="3"]
position = Vector2( -0.852837, 92.8564 )

[node name="PortalRight" parent="Portals" instance=ExtResource( 3 )]
position = Vector2( 1023.82, 306.933 )
rotation = 1.57079
direction = Vector2( 1, 0 )

[node name="PlayerSpawn" parent="Portals/PortalRight" index="3"]
position = Vector2( -0.293732, 88.2857 )

[node name="PortalUp" parent="Portals" instance=ExtResource( 3 )]
position = Vector2( 511.555, 0.209976 )
direction = Vector2( 0, -1 )

[node name="PlayerSpawn" parent="Portals/PortalUp" index="3"]
position = Vector2( 0, 83.1261 )

[node name="PortalDown" parent="Portals" instance=ExtResource( 3 )]
position = Vector2( 511.555, 600.372 )
rotation = 3.14159
direction = Vector2( 0, 1 )

[node name="PlayerSpawn" parent="Portals/PortalDown" index="3"]
position = Vector2( -0.000396728, 91.6585 )

[node name="SpawnPlayer" type="Position2D" parent="."]
position = Vector2( 511.265, 298.518 )

[node name="Walls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]
collision_layer = 32
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/StaticBody2D"]
polygon = PoolVector2Array( -1.08199, -0.259735, 446.167, -0.344925, 473.335, -58.3987, 546.968, -59.9879, 573.19, -1.45261, 1024.49, -0.259735, 1023.92, 46.2245, 575.75, 46.2245, 543.525, -54.1609, 482.076, -54.4258, 445.722, 45.0909, -1.23431, 43.5548 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Walls"]
position = Vector2( 1023.18, 13.1091 )
collision_layer = 32
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/StaticBody2D2"]
polygon = PoolVector2Array( 1.41046, 27.1086, 0.519836, 230.176, 52.9123, 252.869, 52.5786, 328.287, -0.147644, 345.974, 0.637817, 586.888, -43.6415, 586.406, -45.977, 346.803, 47.5729, 324.95, 48.2403, 260.21, -44.5311, 227.173, -46.6437, 28.1098 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Walls"]
position = Vector2( -0.0955811, 598.978 )
collision_layer = 32
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/StaticBody2D3"]
polygon = PoolVector2Array( 0.859283, 0.957458, 444.634, 0.716553, 463.719, 48.9253, 546.457, 50.7443, 571.173, 0.871094, 978.967, 0.537354, 978.633, -44.5135, 571.507, -47.8506, 544.159, 45.6178, 474.397, 43.9197, 456.711, -45.8483, 0.47699, -46.3673 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Walls"]
position = Vector2( -1.33032, 14.0082 )
collision_layer = 32
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/StaticBody2D4"]
polygon = PoolVector2Array( 0.429716, 29.8804, 2.48076, 223.995, -58.9498, 250.965, -58.9706, 328.217, 0.98245, 346.107, 2.83417, 546.46, 51.1, 544.776, 45.1825, 346.857, -52.9566, 324.007, -51.8329, 256.584, 47.43, 220.999, 48.8177, 29.5466 )

[node name="Ennemis" type="Node" parent="."]

[node name="Turret" parent="Ennemis" instance=ExtResource( 4 )]
position = Vector2( 837.184, 178.271 )

[node name="Turret2" parent="Ennemis" instance=ExtResource( 4 )]
position = Vector2( 829.625, 428.995 )

[editable path="Portals/PortalLeft"]
[editable path="Portals/PortalRight"]
[editable path="Portals/PortalUp"]
[editable path="Portals/PortalDown"]
